--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
         <link rel="stylesheet" href="assets/css/main.css">
         <!-- If in production load the following css -->
-		<!-- <link rel="stylesheet" href="assets/css/main.min.css"> -->
+		<link rel="stylesheet" href="assets/css/main.min.css">
         <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
     </head>
-    <body>
+    <body data-season="true">
         <div id="fb-root"></div>
 
         <div id="fb-root"></div>
@@ -39,12 +39,10 @@
         fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-		<section class="page-container text-center" data-season="no">
+		<section class="page-container text-center" >
             <h2>Is it Pumpkin Spice Season?</h2>
-            <h1 class="huge text-upper nope">No</h1>            
+            <h1 class="main-text huge text-upper">??</h1>            
         </section>
-
-        <div class="map" id="map"></div>
         
         <footer class="footer text-center">
             <div class="flex-center-all">
@@ -58,22 +56,13 @@
             </div>
         </footer>
 
-        <style>
-        .map {
-            width: 100%;
-            height:500px;
-        }
-        </style>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCixh0_mjHzRHE2DStWryPUmB0OMCfnrFY&libraries=places"></script>
         <script src="assets/js/built/vendor.bundle.js"></script>
         <script src="assets/js/built/main.bundle.js"></script>
 
-        <script>
-         
-        </script>
 
         <!-- If in production, load the following js files -->
         <!-- <script src="assets/js/dist/vendor.bundle.js"></script> -->
-        <!-- <script src="assets/js/dist/main.bundle.js"></script> -->
+        <script src="assets/js/dist/main.bundle.js"></script>
     </body>
 </html>
