wip almost done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <meta name="twitter:description" content="Is It Pumpkin Spice Season yet? Find the nearest Starbucks to get your PSL on." />
         <meta name="twitter:image" content="#" />
 
-        <!-- <link rel="stylesheet" href="assets/css/main.css"> -->
+        <link rel="stylesheet" href="assets/css/main.css">
         <!-- If in production load the following css -->
-		<link rel="stylesheet" href="assets/css/main.min.css">
+		<!-- <link rel="stylesheet" href="assets/css/main.min.css"> -->
         <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
     </head>
     <body data-season="true">
@@ -57,10 +57,10 @@
         </footer>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCixh0_mjHzRHE2DStWryPUmB0OMCfnrFY&libraries=places"></script>
-        <!-- <script src="assets/js/built/main.bundle.js"></script> -->
+        <script src="assets/js/built/main.bundle.js"></script>
 
 
         <!-- If in production, load the following js files -->
-        <script src="assets/js/dist/main.bundle.js"></script>
+        <!-- <script src="assets/js/dist/main.bundle.js"></script> -->
     </body>
 </html>
