--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Is It Pumpkin Spice Season?</title>
-        <meta name="description" content="Is It Pumpkin Spice Season yet? Find the nearest Starbucks to get your PSL on.">
+        <meta name="description" content="Is It Pumpkin Spice Season yet? Find out now.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <meta property="og:url"           content="https://isitpumpkinspiceseason.com" />
         <meta property="og:type"          content="website" />
         <meta property="og:title"         content="Is It Pumpkin Spice Season?" />
-        <meta property="og:description"   content="Is It Pumpkin Spice Season yet? Find the nearest Starbucks to get your PSL on." />
-        <meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />
+        <meta property="og:description"   content="Is It Pumpkin Spice Season yet? Find out now." />
+        <meta property="og:image"         content="https://isitpumpkinspiceseason.com/assets/img/psl.jpg" />
+        <meta property="fb:app_id"        content="110652799668823">
+        
 
-        <meta name="twitter:card" content="summary" />
-        <meta name="twitter:creator" content="@patrickbjohnson" />
-        <meta name="twitter:title" content="Is It Pumpkin Spice Season?" />
-        <meta name="twitter:description" content="Is It Pumpkin Spice Season yet? Find the nearest Starbucks to get your PSL on." />
-        <meta name="twitter:image" content="#" />
+        <meta name="twitter:card"           content="summary" />
+        <meta name="twitter:creator"        content="@patrickbjohnson" />
+        <meta name="twitter:title"          content="Is It Pumpkin Spice Season?" />
+        <meta name="twitter:description"    content="Is It Pumpkin Spice Season yet? Find out now." />
+        <meta name="twitter:image"          content="https://isitpumpkinspiceseason.com/assets/img/psl.jpg" />
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <!-- <link rel="stylesheet" href="assets/css/main.css"> -->
         <!-- If in production load the following css -->
-		<!-- <link rel="stylesheet" href="assets/css/main.min.css"> -->
+		<link rel="stylesheet" href="assets/css/main.min.css">
         <script type="text/javascript" async src="https://platform.twitter.com/widgets.js"></script>
     </head>
-    <body data-season="true">
+    <body data-season="false">
         <div id="fb-root"></div>
 
         <div id="fb-root"></div>
@@ -57,10 +59,10 @@
         </footer>
 
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCixh0_mjHzRHE2DStWryPUmB0OMCfnrFY&libraries=places"></script>
-        <script src="assets/js/built/main.bundle.js"></script>
+        <!-- <script src="assets/js/built/main.bundle.js"></script> -->
 
 
         <!-- If in production, load the following js files -->
-        <!-- <script src="assets/js/dist/main.bundle.js"></script> -->
+        <script src="assets/js/dist/main.bundle.js"></script>
     </body>
 </html>
